--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Thesis Prototypes</h1>
     <ul>
-        <li><a href="prototype1/index.html">Prototype 1</a></li>
-        <li><a href="prototype2/index.html">Prototype 2</a></li>
-        <li><a href="prototype3/index.html">Prototype 3</a></li>
+        <li><a href="Prototype1/index.html">Prototype 1</a></li>
+        <li><a href="Prototype2/index.html">Prototype 2</a></li>
+        <li><a href="Prototype3/index.html">Prototype 3</a></li>
     </ul>
 </body>
 </html>
