--- a/index.html
+++ b/index.html
@@ -5,12 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thesis Prototypes</title>
 </head>
+<style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #2a0845 0%, #6441A5 100%);
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            padding: 40px;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur(4px);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            max-width: 80%;
+            width: 400px;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        }
+        h2 {
+            font-size: 1.8em;
+            margin-bottom: 30px;
+            color: #ffd700;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+        }
+        .btn-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 15px 30px;
+            background: linear-gradient(45deg, #ff00ff, #00ffff);
+            color: #fff;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+            font-size: 1.1em;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+        }
+        .btn:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            background: linear-gradient(45deg, #00ffff, #ff00ff);
+        }
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+                width: 90%;
+            }
+            h1 {
+                font-size: 2em;
+            }
+            h2 {
+                font-size: 1.5em;
+            }
+            .btn {
+                padding: 12px 24px;
+                font-size: 1em;
+            }
+        }
+    </style>
+</head>
 <body>
-    <h1>Thesis Prototypes</h1>
-    <ul>
-        <li><a href="Prototype1/index.html">Prototype 1</a></li>
-        <li><a href="Prototype2/index.html">Prototype 2</a></li>
-        <li><a href="Prototype3/index.html">Prototype 3</a></li>
-    </ul>
+    <div class="container">
+        <h1>Thesis Prototypes</h1>
+        <h2>Let's have some fun!</h2>
+        <div class="btn-container">
+            <a href="Prototype1/index.html" class="btn">Prototype 1</a>
+            <a href="Prototype2/index.html" class="btn">Prototype 2</a>
+            <a href="Prototype3/index.html" class="btn">Prototype 3</a>
+        </div>
+    </div>
 </body>
 </html>
