--- a/Prototype1/index.html
+++ b/Prototype1/index.html
@@ -233,6 +233,34 @@
         .color-brown { background-color:brown; }
         .color-green { background-color: green; }
 
+
+        .submit-btn {
+        display: inline-block;
+        background-color: #DBD7D7; 
+        color: black; 
+        padding: 10px 20px; 
+        border: none; 
+        border-radius: 5px; 
+        margin: 20px 0; 
+        text-decoration: none;
+        font-size: 16px;
+        transition: all 0.3s ease;
+        max-width: 100%;
+        text-align: center;
+    }
+    .submit-btn:hover {
+        background-color: #291c23;
+        color: #ffffff;
+        text-decoration: none;
+    }
+    @media (max-width: 768px) {
+        .submit-btn {
+            width: 100%;
+            padding: 15px 20px;
+            font-size: 18px;
+        }
+    }
+
 </style>
 </head>
 <body>
@@ -392,6 +420,10 @@
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="42"> 42 </label> <span>80</span></li>
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="43"> 43 </label> <span>95</span></li>
                 </ul>
+            </div>
+
+            <div class="col-md-12 text-center my-2">
+                <a href="https://forms.gle/LwPPWELajf2iMdPD9" class="submit-btn btn mb-4" target="_blank" rel="noopener noreferrer">Submit Your Feedback Here</a>
             </div>
 
         </div>
