--- a/Prototype1/index.html
+++ b/Prototype1/index.html
@@ -423,7 +423,7 @@
             </div>
 
             <div class="col-md-12 text-center my-2">
-                <a href="https://forms.gle/LwPPWELajf2iMdPD9" class="submit-btn btn mb-4" target="_blank" rel="noopener noreferrer">Submit Your Feedback Here</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSctYTtWXtZPsRcnY8Et01XfmlKGACerpM_JrAw9ZvmdAZ4FTA/viewform?usp=sf_link" class="submit-btn btn mb-4" target="_blank" rel="noopener noreferrer">Submit Your Feedback Here</a>
             </div>
 
         </div>
