--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Thesis Prototypes</h1>
+        <h1>Usability Study for Faceted Search Systems</h1>
         <h2>Let's have some fun!</h2>
         <p>
             I have three prototypes that I'd love your thoughts on! You can find the links below. After you've explored each prototype, just click the "Submit Your Feedback Here" button at the bottom of the site section. You'll be taken to a questionnaire for each prototype separately. Once you've submitted your answers, feel free to come back to this page and check out the next prototype. Thank you for your help!
