--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             I have three prototypes that I'd love your thoughts on! You can find the links below. After you've explored each prototype, just click the "Submit Your Feedback Here" button under the "Size" section. You'll be taken to a questionnaire for each prototype separately. Once you've submitted your answers, feel free to come back to this page and check out the next prototype. Thank you for your help!
         </p>
         <div class="btn-container">
-            <a href="Prototype1/index.html" class="btn">Prototype 1</a>
-            <a href="Prototype2/index.html" class="btn">Prototype 2</a>
-            <a href="Prototype3/index.html" class="btn">Prototype 3</a>
+            <a href="Prototype1/index.html" class="btn" target="_blank">Prototype 1</a>
+            <a href="Prototype2/index.html" class="btn" target="_blank">Prototype 2</a>
+            <a href="Prototype3/index.html" class="btn" target="_blank">Prototype 3</a>
         </div>
     </div>
 </body>
