--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <script>
         // Array of prototype links and names
         const prototypes = [
-            { name: "Prototype 1", link: "Prototype1/index.html" },
-            { name: "Prototype 2", link: "Prototype2/index.html" },
-            { name: "Prototype 3", link: "Prototype3/index.html" }
+            { name: "Prototype", link: "Prototype1/index.html" },
+            { name: "Prototype", link: "Prototype2/index.html" },
+            { name: "Prototype", link: "Prototype3/index.html" }
         ];
 
         // Function to shuffle an array
