--- a/Prototype1/index.html
+++ b/Prototype1/index.html
@@ -1606,7 +1606,10 @@
 </div>
 
  <script>
-
+    // Redirect to Google Form after 3 minutes
+    setTimeout(() => {
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSctYTtWXtZPsRcnY8Et01XfmlKGACerpM_JrAw9ZvmdAZ4FTA/viewform?usp=sf_link";
+    }, 180000); // 180000 milliseconds = 3 minutes
 
     // Reloading page function
     function fakeReload() {
