--- a/Prototype1/index.html
+++ b/Prototype1/index.html
@@ -135,8 +135,8 @@
             background-color: purple;
         }
 
-        .purplish-red {
-            background-color: #d33682; /* Purplish-red */
+        .purplishred {
+            background-color: #d33682; /* purplishred */
         }
 
         .pink {
@@ -225,7 +225,7 @@
         .color-grey { background-color: grey; }
         .color-red { background-color: red; }
         .color-purple { background-color: purple; }
-        .color-purplish-red { background-color: #d33682; } 
+        .color-purplishred { background-color: #d33682; } 
         .color-pink { background-color: pink; }
         .color-orange { background-color: orange; }
         .color-blue { background-color: blue; }
@@ -343,7 +343,43 @@
             </div>
 
 
+            <!-- Sizes Section -->
+            <div class="filter-section mb-4">
+                <h5>Sizes</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="37"> 37 </label> <span>85</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="38"> 38 </label> <span>91</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="39"> 39 </label> <span>74</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="40"> 40 </label> <span>188</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="41"> 41 </label> <span>87</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="42"> 42 </label> <span>80</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="43"> 43 </label> <span>95</span></li>
+                </ul>
+            </div>
 
+
+
+            <!-- Colors Section -->
+            <div class="filter-section mb-4">
+                <h5>Colors</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox black"> Black </label> <span>82</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox white"> White </label> <span>79</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox grey"> Grey </label> <span>71</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox red"> Red </label> <span>56</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purple"> Purple </label> <span>57</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purplishred"> purplishred </label> <span>42</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox pink"> Pink </label> <span>57</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox orange"> Orange </label> <span>69</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox blue"> Blue </label> <span>66</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox yellow"> Yellow </label> <span>45</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox brown"> Brown </label> <span>9</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox green"> Green </label> <span>67</span></li>
+                </ul>
+            </div>
+
+
+            
             <!-- Types Section -->
             <div class="filter-section mb-4">
                 <h5>Types</h5>
@@ -403,39 +439,6 @@
                     <li class="shoe-model mb-2" data-model="air-zoom-maxfly"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" name="shoe-model" value="Nike Air Zoom Maxfly" data-type="Track & Field"> Nike Air Zoom Maxfly </label> <span>15</span></li>
                     <li class="shoe-model mb-2" data-model="superrep-cycle"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" name="shoe-model" value="Nike SuperRep Cycle" data-type="Cycling"> Nike SuperRep Cycle </label> <span>20</span></li>
                     <li class="shoe-model mb-2" data-model="free-rn"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" name="shoe-model" value="Nike Free RN" data-type="Minimalist & Barefoot"> Nike Free RN </label> <span>30</span></li>
-                </ul>
-            </div>
-
-            <!-- Sizes Section -->
-            <div class="filter-section mb-4">
-                <h5>Sizes</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="37"> 37 </label> <span>85</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="38"> 38 </label> <span>91</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="39"> 39 </label> <span>74</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="40"> 40 </label> <span>188</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="41"> 41 </label> <span>87</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="42"> 42 </label> <span>80</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="size-checkbox" value="43"> 43 </label> <span>95</span></li>
-                </ul>
-            </div>
-
-            <!-- Colors Section -->
-            <div class="filter-section mb-4">
-                <h5>Colors</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox black"> Black </label> <span>82</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox white"> White </label> <span>79</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox grey"> Grey </label> <span>71</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox red"> Red </label> <span>56</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purple"> Purple </label> <span>57</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purplish-red"> Purplish-red </label> <span>42</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox pink"> Pink </label> <span>57</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox orange"> Orange </label> <span>69</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox blue"> Blue </label> <span>66</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox yellow"> Yellow </label> <span>45</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox brown"> Brown </label> <span>9</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox green"> Green </label> <span>67</span></li>
                 </ul>
             </div>
 
@@ -525,7 +528,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-white"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                             <div class="color-block color-yellow"></div>
                             <div class="color-block color-green"></div>
@@ -675,7 +678,7 @@
                         <div class="colors">
                             <div class="color-block color-black"></div>
                             <div class="color-block color-pink"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                         </div>
                         </div>
                 </div>
@@ -749,7 +752,7 @@
                             <div class="color-block color-white"></div>
                             <div class="color-block color-grey"></div>
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                         </div>
                         </div>
@@ -786,7 +789,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                         </div>
                         </div>
@@ -861,7 +864,7 @@
                         <div class="colors">
                             <div class="color-block color-white"></div>
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                         </div>
                         </div>
@@ -935,7 +938,7 @@
                         <div class="colors">
                             <div class="color-block color-grey"></div>
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                             <div class="color-block color-blue"></div>
                         </div>
@@ -1011,7 +1014,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                             <div class="color-block color-green"></div>
                         </div>
@@ -1129,7 +1132,7 @@
                             <div class="color-block color-white"></div>
                             <div class="color-block color-pink"></div>
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-green"></div>
                         </div>
                         </div>
@@ -1238,7 +1241,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                             <div class="color-block color-green"></div>
                         </div>
@@ -1367,7 +1370,7 @@
                         <div class="colors">
                             <div class="color-block color-red"></div>
                             <div class="color-block color-orange"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-blue"></div>
                             <div class="color-block color-yellow"></div>
                         </div>
@@ -1386,7 +1389,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                             <div class="color-block color-yellow"></div>
                             <div class="color-block color-green"></div>
@@ -1463,7 +1466,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-pink"></div>
                         </div>
                         </div>
@@ -1501,7 +1504,7 @@
                         <div class="colors">
                             <div class="color-block color-white"></div>
                             <div class="color-block color-purple"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-red"></div>
                         </div>
                         </div>
@@ -1574,7 +1577,7 @@
                         </div>
                         <div class="colors">
                             <div class="color-block color-black"></div>
-                            <div class="color-block color-purplish-red"></div>
+                            <div class="color-block color-purplishred"></div>
                             <div class="color-block color-blue"></div>
                             <div class="color-block color-yellow"></div>
                         </div>
@@ -1909,6 +1912,22 @@
         });
     }
 
+
+
+        function toggleExclusivePriceCheckboxes(event) {
+  const priceCheckboxes = document.querySelectorAll('.price-checkbox');
+  priceCheckboxes.forEach(checkbox => {
+    if (checkbox !== event.target) {
+      checkbox.checked = false;
+    }
+  });
+  filterItems();
+}
+
+priceCheckboxes.forEach(checkbox => {
+  checkbox.addEventListener('change', toggleExclusivePriceCheckboxes);
+});
+
     // Function to filter the items
     function filterItems() {
         items.forEach(item => {
@@ -2123,6 +2142,20 @@
     });
 }
 
+    function toggleExclusiveColorCheckboxes(event) {
+  const colorCheckboxes = document.querySelectorAll('.color-checkbox');
+  colorCheckboxes.forEach(checkbox => {
+    if (checkbox !== event.target) {
+      checkbox.checked = false;
+    }
+  });
+  filterShoesByColor();
+}
+
+document.querySelectorAll('.color-checkbox').forEach(checkbox => {
+  checkbox.addEventListener('change', toggleExclusiveColorCheckboxes);
+});
+
 
 
 
@@ -2155,6 +2188,22 @@
         }
     });
 }
+
+
+    function toggleExclusiveSizeCheckboxes(event) {
+  const sizeCheckboxes = document.querySelectorAll('.size-checkbox');
+  sizeCheckboxes.forEach(checkbox => {
+    if (checkbox !== event.target) {
+      checkbox.checked = false;
+    }
+  });
+  filterBySize();
+}
+
+document.querySelectorAll('.size-checkbox').forEach(checkbox => {
+  checkbox.addEventListener('change', toggleExclusiveSizeCheckboxes);
+});
+
 
     // Add event listener to all size checkboxes
     document.querySelectorAll('.size-checkbox').forEach((checkbox) => {
