--- a/Prototype2/index.html
+++ b/Prototype2/index.html
@@ -383,7 +383,7 @@
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox grey"> Grey </label> <span>71</span></li>
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox red"> Red </label> <span>56</span></li>
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purple"> Purple </label> <span>57</span></li>
-                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purplishred"> purplishred </label> <span>42</span></li>
+                    <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox purplishred"> Purplish </label> <span>42</span></li>
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox pink"> Pink </label> <span>57</span></li>
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox orange"> Orange </label> <span>69</span></li>
                     <li class="mb-2"><label class="d-flex justify-content-between align-items-center"><input type="checkbox" class="color-checkbox blue"> Blue </label> <span>66</span></li>
