--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     
     
     <p style="color: #000; text-align: center;"><em>I sincerely appreciate your time and effort in assisting me with improvements. Your feedback is invaluable to my research and will make a significant difference!</em></p>
+        <p style="color: #000; text-align: center;">All interaction data and survey responses would be collected solely for research purposes. </p>
 
 
 
