--- a/Prototype3/index.html
+++ b/Prototype3/index.html
@@ -1638,9 +1638,9 @@
  <script>
 
     // Redirect to Google Form after 3 minutes
-    setTimeout(() => {
-        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSd7sBJbD0dKYT2qdsu_HOP2QHd-5UdwVo3PVeX7uxQLttrFGg/viewform?usp=sf_link";
-    }, 180000); // 180,000 milliseconds = 4 minutes
+    //setTimeout(() => {
+        //window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSd7sBJbD0dKYT2qdsu_HOP2QHd-5UdwVo3PVeX7uxQLttrFGg/viewform?usp=sf_link";
+    //}, 180000); // 180,000 milliseconds = 4 minutes
     
     const shoesData = [
     //  shoe objects
