--- a/Prototype1/index.html
+++ b/Prototype1/index.html
@@ -1634,9 +1634,9 @@
 
     
     // Redirect to Google Form after 3 minutes
-    //setTimeout(() => {
-        //window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSctYTtWXtZPsRcnY8Et01XfmlKGACerpM_JrAw9ZvmdAZ4FTA/viewform?usp=sf_link";
-    //}, 180000); // 180,000 milliseconds = 4 minutes
+    setTimeout(() => {
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSctYTtWXtZPsRcnY8Et01XfmlKGACerpM_JrAw9ZvmdAZ4FTA/viewform?usp=sf_link";
+    }, 180000); // 180,000 milliseconds = 4 minutes
 
 
 
