--- a/Prototype2/index.html
+++ b/Prototype2/index.html
@@ -1645,9 +1645,9 @@
  <script>
 
     // Redirect to Google Form after 3 minutes
-    //setTimeout(() => {
-        //window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScT7csapQXXy7CUBqREw6Cik8rLiUIidNsMPvUVDgbNySIslQ/viewform?usp=sf_link";
-    //}, 180000); // 180,000 milliseconds = 4 minutes
+    setTimeout(() => {
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScT7csapQXXy7CUBqREw6Cik8rLiUIidNsMPvUVDgbNySIslQ/viewform?usp=sf_link";
+    }, 180000); // 180,000 milliseconds = 4 minutes
 
     // 0---> Clear All Filters Button
 
